solc_mutator_ossfuzz_seed_corpus/test_sol/test_77eb6e73c6387185636476f7966d6c968f76f4107955b15126f81a0e164638d3_1e3a0c24f5547e6b2e82f4cbe586bbc168156954_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes29 i0)  returns(address o0,bool o1,bool o2)
{
  {


{


  {
  }


}

  }

  o1 = ((927541575506776939880733997016510142 / 1325645604063147929789136083943651114) == (173157899870253716220950637412883916 - 444717926763740595733589169610825208));


}
function f1(bytes memory i0,address i1,bool i2)  returns(bool o0)
{ }
contract C0 {
}
// ----
// TypeError 2271: (su0.sol:115-274): Operator == not compatible with types rational_const 1545...(28 digits omitted)...8357 / 2209...(28 digits omitted)...8519 and int_const -271...(29 digits omitted)...1292
